--- a/acme_project/templates/birthday/birthday.html
+++ b/acme_project/templates/birthday/birthday.html
@@ -1,5 +1,21 @@
 {% extends "base.html" %}
+<!-- Подключаем библиотеку django_bootstrap5. -->
+{% load django_bootstrap5 %}
 
 {% block content %}
-
+  с
+  {% with data=request.GET %}         <!-- Присваиваем переменной data объект request.GET -->
+    {% if form.is_valid %}           <!-- В дальнейшем используем имя data вместо request.GET -->  
+                                    <!-- ИЗМЕНИЛИ data на ВАЛИД, чтобы приветствие появлялось только при полностью валидных данных.-->  
+      
+    <h2>Привет, {{ data.first_name }} {{ data.last_name }}</h2>
+      {% if birthday_countdown == 0 %}      <!-- СЧЁТЧИК ДО ДР Если до дня рождения 0 дней... -->
+        С днём рождения!        <!-- ...выводим поздравление: -->
+      {% else %}
+    
+        Осталось дней до дня рождения: {{ birthday_countdown }}!         <!-- ...сообщаем, сколько осталось ждать: -->
+      {% endif %}
+    {% endif %}
+    <!-- Когда заканчивается область шаблона, где нужна переменная,  закрываем тег with ПЕРЕМЕННАЯ УБРАНА -->
+  {% endwith %}
 {% endblock %}
