--- a/acme_project/templates/birthday/birthday.html
+++ b/acme_project/templates/birthday/birthday.html
@@ -3,7 +3,17 @@
 {% load django_bootstrap5 %}
 
 {% block content %}
-  с
+  <div class="card col-4">    <!-- Bootstrap card / классом col-4 - ограничение колонок -->
+    <div class="card-header">
+      Калькулятор ожидания дня рождения
+    </div>
+    <div class="card-body">
+      <form>
+        {% bootstrap_form form %}
+        {% bootstrap_button button_type="submit" content="Отправить" %}
+      </form>
+    </div>
+  </div>
   {% with data=request.GET %}         <!-- Присваиваем переменной data объект request.GET -->
     {% if form.is_valid %}           <!-- В дальнейшем используем имя data вместо request.GET -->  
                                     <!-- ИЗМЕНИЛИ data на ВАЛИД, чтобы приветствие появлялось только при полностью валидных данных.-->  
