--- a/acme_project/templates/includes/header.html
+++ b/acme_project/templates/includes/header.html
@@ -1,3 +1,4 @@
+<!--  шаблон панели навигации -->
 <header>
   <nav class="navbar shadow-sm">
     <div class="container">
@@ -14,6 +15,12 @@
               href="{% url 'birthday:create' %}">
               Калькулятор дней рождения
             </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link {% if view_name == 'birthday:list' %} active {% endif %}"
+            href="{% url 'birthday:list' %}">
+            Список дней рождения
+          </a>
           </li>
         </ul>
       {% endwith %}
