--- a/acme_project/templates/birthday/birthday.html
+++ b/acme_project/templates/birthday/birthday.html
@@ -3,30 +3,42 @@
 {% load django_bootstrap5 %}
 
 {% block content %}
-  <div class="card col-4">    <!-- Bootstrap card / классом col-4 - ограничение колонок -->
-    <div class="card-header">
-      Калькулятор ожидания дня рождения
+  <!-- Переносим тег with в самое начало блока content. -->   <!-- В дальнейшем используем имя data вместо request.GET -->  
+  {% with data=form.instance %}  <!-- Присваиваем переменной data объект request.GET / ЗАМЕНА: request.GET-> request.POST-> form.instance --> <!-- ИЗМЕНИЛИ data на ВАЛИД, чтобы приветствие появлялось только при полностью валидных данных.--> 
+    {% if "/edit/" in request.path %}   <!-- Если в пути запроса содержится строка /edit/. -->
+      <!-- Вместо form.instance подставляем data. -->
+      <h1>Редактировать запись {{ data.pk }}</h1>   <!-- БЫЛО form.instance.pk ПЕРЕНЕСЛИ {процент 'с по англ' … процент} ВЫШЕ и сменили на data -->
+    {% elif "/delete/" in request.path %}
+      <h1>Удалить запись {{ data.pk }}</h1>
+    {% else %}
+      <h1>Создать запись</h1>
+    {% endif %}
+    <div class="card col-4">    <!-- Bootstrap card / классом col-4 - ограничение колонок -->
+      <div class="card-header">
+        Калькулятор ожидания дня рождения
+      </div>
+      <div class="card-body">
+        <form method="post">
+          {% csrf_token %}    <!-- Без тегa csrf_token POST-запрос будет отклонён. -->
+          {% if not "/delete/" in request.path %}
+            {% bootstrap_form form %}
+          {% else %}
+            <p>{{ data.first_name }} {{ data.last_name }}</p>
+            <p>{{ data.birthday }}</p>
+          {% endif %}
+          {% bootstrap_button button_type="submit" content="Отправить" %}
+        </form>
+      </div>
     </div>
-    <div class="card-body">
-      <form method="post">
-        {% csrf_token %}      <!-- Без тегa csrf_token POST-запрос будет отклонён. -->
-        {% bootstrap_form form %}
-        {% bootstrap_button button_type="submit" content="Отправить" %}
-      </form>
-    </div>
-  </div>
-  {% with data=form.instance %}         <!-- Присваиваем переменной data объект request.GET / ЗАМЕНА: request.GET-> request.POST-> form.instance -->
-    {% if form.is_valid %}           <!-- В дальнейшем используем имя data вместо request.GET -->  <!-- ИЗМЕНИЛИ data на ВАЛИД, чтобы приветствие появлялось только при полностью валидных данных.-->  
-      ID новой записи в БД: {{ data.id }} <!-- Получить id объекта -->
-    <hr>
-    <h2>Привет, {{ data.first_name }} {{ data.last_name }}</h2>
-      {% if birthday_countdown == 0 %}      <!-- СЧЁТЧИК ДО ДР Если до дня рождения 0 дней... -->
-        <p>С днём рождения!</p>        <!-- ...выводим поздравление: -->
+    {% if form.is_valid %} 
+      ID записи в БД: {{ data.id }}   <!-- Получить id объекта -->
+      <hr>
+      <h2>Привет, {{ data.first_name }} {{ data.last_name }}</h2>
+      {% if birthday_countdown == 0 %}    <!-- СЧЁТЧИК ДО ДР Если до дня рождения 0 дней... -->
+        <p>С днём рождения!</p>   <!-- ...выводим поздравление: -->
       {% else %}
-    
-        <p>Осталось дней до дня рождения: {{ birthday_countdown }}!</p>         <!-- ...сообщаем, сколько осталось ждать: -->
+        <p>Осталось дней до дня рождения: {{ birthday_countdown }}!</p>
       {% endif %}
     {% endif %}
-    <!-- Когда заканчивается область шаблона, где нужна переменная,  закрываем тег with ПЕРЕМЕННАЯ УБРАНА -->
-  {% endwith %}
+  {% endwith %}  <!-- Когда заканчивается область шаблона, где нужна переменная data,  закрываем тег with ПЕРЕМЕННАЯ УБРАНА -->
 {% endblock %}
