--- a/acme_project/templates/birthday/birthday.html
+++ b/acme_project/templates/birthday/birthday.html
@@ -18,7 +18,7 @@
         Калькулятор ожидания дня рождения
       </div>
       <div class="card-body">
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
           {% csrf_token %}    <!-- Без тегa csrf_token POST-запрос будет отклонён. -->
           {% if not "/delete/" in request.path %}
             {% bootstrap_form form %}
