--- a/acme_project/templates/birthday/birthday_list.html
+++ b/acme_project/templates/birthday/birthday_list.html
@@ -15,9 +15,11 @@
           {{ birthday.first_name }} {{ birthday.last_name }} - {{ birthday.birthday }}
           <a href="{% url 'birthday:detail' birthday.id %}">Сколько до дня рождения?</a>
         </div>      
+        {% if birthday.author == user %} <!-- проверка - зареганные пользователи видять ссылки только под своими записями, а анонимным посетителям ссылки не видны -->
         <div>
           <a href="{% url 'birthday:edit' birthday.id %}">Изменить запись</a> | <a href="{% url 'birthday:delete' birthday.id %}">Удалить запись</a>
         </div>
+      {% endif %} 
       </div>
 
       {% if not forloop.last %}
